samples/_failures_safe/1761257645_0c3802_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67e41705.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_67e41705.c:171:5: error: expected identifier at end of input
  171 |     int num_nodes = graph->
      |     ^~~
./samples/SAFE/__tmp_67e41705.c:171:5: error: expected declaration or statement at end of input
